[package]
name = "quickcheck"
version = "0.8.5"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Automatic property based testing with shrinking."
documentation = "http://burntsushi.net/rustdoc/quickcheck/"
homepage = "https://github.com/BurntSushi/quickcheck"
repository = "https://github.com/BurntSushi/quickcheck"
readme = "README.md"
keywords = ["testing", "quickcheck", "property", "shrinking", "fuzz"]
categories = ["development-tools::testing"]
license = "Unlicense/MIT"
exclude = ["/.travis.yml", "/Makefile", "/ctags.rust", "/session.vim", "/sgx/*"]

[workspace]
#members = ["quickcheck_macros"]

[features]
default = ["mesalock_sgx"]
unstable = []
mesalock_sgx = ["sgx_tstd"]

[lib]
name = "quickcheck"

[dependencies]
log = { git = "https://github.com/NexTokenTech/log-sgx", optional = true }
rand = { git = "https://github.com/NexTokenTech/rand-sgx"}
rand_core = { git = "https://github.com/NexTokenTech/rand-sgx"}
sgx_tstd = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git", optional = true }
