[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
quickcheck = { path = "../../.." }
rand = { git = "https://github.com/NexTokenTech/rand-sgx" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git" }
sgx_tstd = { version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git" }
sgx_tunittest = {version = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git" }
